[WFCORE-718] Add CLI command builder.